feat: Calculadora de velocidade media com node recebendo entradas do usuario

--- a/03-back-end/bloco-22-introducao-ao-desenvolvimento-web-com-nodejs/dia-1-nodejs-um-motor-javascript/velocidade-media/package.json
+++ b/03-back-end/bloco-22-introducao-ao-desenvolvimento-web-com-nodejs/dia-1-nodejs-um-motor-javascript/velocidade-media/package.json
@@ -2,12 +2,15 @@
   "name": "velocidade-media",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "velocidade.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node sorteio.js"
+    "velocidade": "node ."
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
