--- a/03-back-end/bloco-24-Nodejs-ORM-e-Auntenticacao/dia-1-ORM-interface-de-aplicacao-com-o-banco-de-dados/package.json
+++ b/03-back-end/bloco-24-Nodejs-ORM-e-Auntenticacao/dia-1-ORM-interface-de-aplicacao-com-o-banco-de-dados/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.19",
     "sequelize": "^6.21.2"
   },
   "devDependencies": {
