--- a/03-back-end/bloco-27-poo-solid/dia-2-heranca-e-interfaces/package.json
+++ b/03-back-end/bloco-27-poo-solid/dia-2-heranca-e-interfaces/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/Student.class.ts"
+    "start": "ts-node src/Subject.class.ts"
   },
   "keywords": [],
   "author": "",
